static/css/style.css
body {
    background-color: #e7ecef;
}


ul {
    list-style-type: none;
    margin: 0 auto;
}

i {
    margin-right: 1rem;
    color: #274c77;
}
.heading-bird-data {
text-align: center;
margin-bottom: 1rem;
}

#add-bird-icon {
    color: #d66e18;
}

.li-style {
    margin: 2rem;
}

.login {
    text-align: center;
    color: #302743;
}

.card-img-top {
    width: 50%;
}
.card-bg {
    background-color: #6096ba;
}

.daily-button {
    margin: 1rem 0 2rem 0;
}

.btn-custom-color-action1 {
    background-color: #6096ba;
    color: white;
}

.btn-custom-color-action2 {
    background-color: #09615b;
    color: white;
}

.btn-custom-color-action3 {
    background-color: #6096ba;
    color: white;
}
.btn-custom-color {
    background-color: #6096ba;
    color: white;
}
.btn-custom-color:hover {
    background-color: #6096ba;
    color: white;
}

.btn-custom-color-action3:hover {
    background-color: white;
    border: 4px solid #a3cef1;

}

.btn-signup,
.btn-edit {
    background-color: #188181;
    color: #fff;
}
.btn-edit-data {
    background-color: #444f4f;
    color: #fff;
    font-size: 0.8rem;
}

.btn-delete {
    color: #fff;
    background: #E84610;
}

.accordion-text {
    font-size: 1.2rem;
}

.dark-bg {
    background-color: #242a30;
}


.hideForm {
    display: none;
}

.showForm {
    display: block;
}

#trainingMotivationButtons {
    display: flex; /* Use flexbox for layout */
    flex-wrap: wrap; /* Allow buttons to wrap to the next line */
    gap: 5px; /* Add spacing between buttons */
    justify-content: flex-start; /* Align buttons to the left */
}

.motivation-btn {
    flex-basis: 10% !important;
    margin: 0 5px 15px 0;
    width: 40px;
    height: 40px;
    font-size: 16px;
    padding: 10px;
    background-color: #2e8bef;
    color: white;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
}
    


.motivation-btn.active {
    background-color: #188181;
    color: white;
    border-color: #e7e9eb;
}
/* .weight-heading {
    font-size: 1.5rem;
    margin: auto;
    color: #274c77;
}
.span-data {
    color: #274c77;
    border:#242a30 solid 1px;
    padding: 2px;
    background-color: white;
    border-radius: 5px;
    margin-left: 2px;
} */
.weight-heading {
    font-size: 1.5rem;
    margin: auto;
    color: #274c77; /* Deep blue */
    font-weight: bold; /* Make the heading bold */
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
    letter-spacing: 0.05rem; /* Slightly increase spacing between letters */
}
.calendarTagetWeight {
    margin-left: 7rem;
}

.span-data {
    color: #274c77; /* Deep blue for the data */
    border: #242a30 solid 1px; /* Dark gray border */
    padding: 4px 6px; /* Add more padding for better spacing */
    background-color: #f0f4f8; /* Light gray-blue background */
    border-radius: 8px; /* Rounded corners */
    margin-left: 4px; /* Slightly increase spacing from the label */
    font-weight: bold; /* Make the data bold */
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
    transition: all 0.3s ease; /* Smooth transition for hover effects */
}

.span-data:hover {
    background-color: #dbe9f1; /* Slightly darker background on hover */
    color: #1b3a57; /* Darker blue text on hover */
    transform: scale(1.05); /* Slightly enlarge the data on hover */
}

.span-font {
    font-size: 1.2rem;
    color: #1b3a57; /* Darker blue for additional text */
    font-style: italic; /* Add an italic style for a softer look */
    margin-right: 8px; /* Add spacing between elements */
}
.body-404 {

    background-image: url('/static/images/blue_sky.jpg');
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100%;
    overflow: hidden
}

.flown-away {
    margin: 2rem;
}

.flex-wrapper {
    display: flex;
    flex-direction: column;

}

.flex-wrapper-login {

    min-height: 84vh;
    display: flex;
    flex-direction: column;

}


.nav-fixed {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
}

.nav-link {
    padding: 0 3rem !important;
}

.button-card {
    background-color: #b4bed5;
    max-height: 15rem;
    border-right: 1rem;
    border-radius: 3%;

}

.main-bg {
    background-color: #c5cddc;
    margin-top: 4.5rem;
}

.alert {
    margin-top: 2rem;
}

.card {
    border: none;
    background-color: transparent;

}

.bird-card {
    width: 19rem;
    background-color: #edf0f392;
    border-radius: 5%;
    box-shadow: 1px 2px black;
    margin-left: 1rem;

}

.image-container {
    position: relative;
    margin-left: 1rem;


}

.bird-list-image {
    width: 17rem;
    height: 15rem;
    object-fit: contain;
    padding-top: 1rem;
}


.image-flash {
    position: relative;
    bottom: 5%;
    width: 17rem;
    background-color: #6096ba;
}

.scale {
    width: 100%;
    height: auto;
}

.bird-type {
    color: rgb(255, 255, 255);
    margin: 4px;
    text-transform: uppercase;
}

.bird-link {
    text-decoration: none;
    color: #242a30;
}

.bird-link:hover {
    color: white;
}
/* Spinner overlay */
.spinner-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 9999;
    visibility: visible;
    opacity: 1;
    transition: opacity 0.3s ease, visibility 0.3s ease;
}

/* Spinner element */
.spinner-border {
    height: 8rem;
    width: 8rem;
   border: .4rem solid #0d6efd;
   border-right-color: transparent;
} 


/* calnedar styles  */
#calendar {
    width: 80%;
    margin: 0 auto; 
  }


#calendar [data-vc-date-btn] {
    font-size: 1rem;
    width: 65%;
  }
  
  .chart-container {
    position: relative;
    margin: 1rem  auto 5rem auto;
    height: 30rem ;
    width: 82%;
  }

#myChart, #motivationChart {
    display: block;
    margin: 0 auto;
    background-color: rgb(255, 255, 255);
    border-radius: 12px;
    width: 100% !important;
    height: 100%!important;
    
}
.no-more-data {
    position: absolute;
    z-index: 100;
    top: 15%;
    left: 50%;
    transform: translate(-50%, -50%);
    box-shadow: #3b334d 10px 12px 12px;
    background-color:orange;
    color: white;
    font-weight: bolder;
}

.btn-chart {
    margin-left: 30vw;
}
.qr-heading {
    text-align: center;
}
.qr-code {
    max-width: 30rem;
    max-height: 30rem;
    height: auto;
    display: block;
    margin: auto;
    padding: auto;

}
/* Spinner animation */
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
} 

/* Hide spinner */
 .spinner-overlay.hidden {
    visibility: hidden;
    opacity: 0;
}

.spinner-select {
    position: absolute; /* Position the spinner relative to the container */
    top: 50%; /* Center vertically */
    left: 50%; /* Center horizontally */
    transform: translate(-50%, -50%); /* Adjust for the spinner's size */
    z-index: 10; 
}
/* The Modal (background) */
.modal-img {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 10000; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
}

/* Modal Content (image) */
.modal-content {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

/* Caption of Modal Image */
#caption {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: #ccc;
  padding: 10px 0;
  height: 150px;
}

/* Add Animation */
.modal-content, #caption {  
  -webkit-animation-name: zoom;
  -webkit-animation-duration: 0.6s;
  animation-name: zoom;
  animation-duration: 0.6s;
}

@-webkit-keyframes zoom {
  from {transform:scale(0)} 
  to {transform:scale(1)}
}

@keyframes zoom {
  from {transform:scale(0.1)} 
  to {transform:scale(1)}
}

/* The Close Button */
.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

/* Responsive Columns */
@media only screen and (max-width: 700px){
  .responsive {
    width: 49.99999%;
    margin: 6px 0;
  }
  .modal-content {
    width: 100%;
  }
  .btn-chart {
    margin-left: 5vw;
}
}

@media only screen and (max-width: 500px){
  .responsive {
    width: 100%;
  }
  .btn-chart {
    font-size: .5rem;
}
}

/* Clear Floats */
.clearfix:after {
  content: "";
  display: table;
  clear: both;
}





@media only screen and (max-width: 480px) {
    .bird-card {
        margin-left: 0rem;
    }
    .chart-container {
        height: 20rem;
        width: 85%;
        margin: 1rem  0rem 5rem 0rem;
        padding: 1px;
      }
      /* .chart-container {
        position: relative;
        margin: 1rem  auto 5rem auto;
        height: 30rem ;
        width: 82%;
      } */
      .weight-heading {
        font-size: 1.2rem;
      }
      .span-font {
        font-size: .9rem;
        
        
      }
}
@media only screen and (max-width: 1100px) {
    .bird-card {
        margin-left: 0rem;
    }
    .chart-container {
        height: 20rem;
        width: 100%;
      }
}

@media only screen and (max-width: 340px) {
    .bird-card {
        margin-left: 0rem;
    }
   
}

